# research-indexer

./: .gitignore  README.md  SPEC.md  pyproject.toml
core/: domain.py  field.py  germ.py  network.py  operative_zero.py  propagation.py  simplex.py  term.py  thermodynamics.py
corpus/: base.py  directory.py
crystallize/: engine.py  germ_detector.py  state.py
extract/: base.py  nlp.py
passage/: eddy.py  engine.py  germ_detector.py  state.py
services/: crystallize_service.py  germ_service.py  passage_service.py
tests/core/: test_eddy.py  test_simplex.py
ui/cli/: main.py
