[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "research-indexer"
version = "0.1.0"
description = "An individuation machine for texts — Simondon, Serres, Deleuze"
requires-python = ">=3.11"

dependencies = [
    "spacy>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
]
pdf = [
    "pdfplumber>=0.10",
]

[project.scripts]
ri = "ui.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
